# AbAffinity

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
AbAffinity/: __init__.py
AbAffinity/data_prep/: build_allcdr_both_cache.py  precompute_allcdr_cache.py
AbAffinity/explain/: export_ig_attributions.py  gate_importance_saaintdb.py  integrated_gradient_twostream.py  integrated_gradients_explainability_saaintdb.py  run_ig_allcdr.py  run_ig_twostream_400.py
AbAffinity/models/: mutual_strong.py  (+1 more)
advanced_results/: cdr_heatmap_data_allcdr.csv
data/: complexes.json  pairs_abbind.csv  pairs_benchmark.csv  pairs_sabdab.csv  pairs_skempi.csv  saaintdb_affinity_only_rows.csv  saaintdb_with_antigen_names.csv  sample_saaintdb_subset.csv
docs/: ESMFOLD2_positioning.md  FIGURE_CAPTIONS.md  METHODS.md  RESULTS.md
notebooks/: AbAffinity_Explainability_Analysis.ipynb  AbAffinity_Panels.ipynb  AgAbGated_Custom_ZeroShot_FewShot_IG.ipynb  BALM_AbAg_Panels.ipynb  BALM_AbAg_SAINTdb_Analysis.ipynb  BALM_AbAg_SAbDab_AbBind_SKEMPI_Analysis.ipynb  BALM_AbAg_Transfer_AllCDR.ipynb
pymol_groundtruth/: README.md  README_composite.md  _composite_meta.json  composite_figures.py  generate_pml.py  gt_attribution_recovery.csv  mapping_1VFB.json  mapping_4ETQ.json  mapping_5GRJ.json  mapping_5Y9J.json  render_figures.py  verify_and_map.py
sota_comparison/: README.md  SOTA_comparison.md  make_comparison_table.py  precompute_perres_saaintdb.py  results_StructureBaseline.csv  run_sota_cv.py  sota_models.py  structure_baseline.py
(+115 files in other folders)
